[package]
name = "llama-cpp-steganography"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-cpp-2 = { git = "https://github.com/nkoppel/llama-cpp-rs", features = ["native"] }
anyhow = { version = "1", features = ["backtrace"] }

rand = "0.8"
memchr = "2"

ordered-float = "4.5"

clap = { version = "4.5", features = ["derive"] }

[features]
cuda = ["llama-cpp-2/cuda"]
